--- a/index.html
+++ b/index.html
@@ -1,11 +1,353 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CyberMerged</title>
+
+
+    <!-- GG FONT  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- OWL CAROUSEL CSS -->
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
+
+    <!-- BOOTSTRAP 5.1 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
+    <!-- HEADER  -->
+    <header>
+        <div class="header__top">
+            <div class="header__topContent container d-flex justify-content-between">
+                <div class="header__left">
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <div class="header__right">
+                    <a href="tel:+021 356 777">
+                        <i class="fa-solid fa-phone"></i>
+                        <span> +021 356 777</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="header__main">
+            <nav class="header__navbar navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                    <a class="navbar-brand" href="#"><span>CYBER</span>MERGED</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#merged__navbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="merged__navbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ABOUT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">GALLERY</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    PAGE
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Codes</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">CONTACT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- CAROUSEL -->
+    <section class="mergedCarousel">
+        <div id="merged__carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#merged__carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#merged__carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#merged__carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/b1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel__caption">
+                    <h5>THE BEST BUSINESS SUPPORT</h5>
+                    <p>Etiam Vitae Augue Odio. Ut Laoreet Ipsum Vel Ultrices Viverra. Donec Nisl Dolor, Mollis Vel
+                        Libero Id, Tempor Cursus Lectus. Vestibulum Eu Ligula Et Pharetra Efficitur. Maecenas
+                        Eleifend.</p>
+                    <div class="merged__button">
+                        <button class="button--white">About Us</button>
+                        <button class="button--purple">Read More</button>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/b1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel__caption">
+                    <h5>THE BEST BUSINESS SUPPORT</h5>
+                    <p>Etiam Vitae Augue Odio. Ut Laoreet Ipsum Vel Ultrices Viverra. Donec Nisl Dolor, Mollis Vel
+                        Libero Id, Tempor Cursus Lectus. Vestibulum Eu Ligula Et Pharetra Efficitur. Maecenas
+                        Eleifend.</p>
+                    <div class="merged__button">
+                        <button class="button--purple">Read More</button>
+                        <button class="button--white">About Us</button>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/b1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel__caption">
+                    <h5>OPEN MINDS. CREATING FUTURE.</h5>
+                    <p>Etiam Vitae Augue Odio. Ut Laoreet Ipsum Vel Ultrices Viverra. Donec Nisl Dolor, Mollis Vel
+                        Libero Id, Tempor Cursus Lectus. Vestibulum Eu Ligula Et Pharetra Efficitur. Maecenas
+                        Eleifend.</p>
+                    <div class="merged__button">
+                        <button class="button--white">About Us</button>
+                        <button class="button--purple">Read More</button>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!-- PROVIDES -->
+    <section class="provides section">
+        <div class="container">
+            <div class="provides__title section-info">
+                <h3>What you get</h3>
+                <p>Our team provides consulting services focusing on the most critical business issues.
+                </p>
+            </div>
+            <div class="provides__line"></div>
+            <div class="provides__content row">
+                <div class="col">
+                    <i class="fa fa-th-large"></i>
+                    <h4>Advanced Business</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore.</p>
+                </div>
+                <div class="col">
+                    <i class="fa fa-share-square"></i>
+                    <h4>Free Updates</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore.</p>
+                </div>
+                <div class="col">
+                    <i class="fa fa-expand-arrows-alt"></i>
+                    <h4>Advanced Business</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- CONTACT -->
+    <section class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-9">
+                    <h3>We Make the Best Business Solutions</h3>
+                </div>
+                <div class="col-3">
+                    <a class="button--purple--orange" href="#">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- PROFFESIONAL -->
+    <section class="proffesional section">
+        <div class="container">
+            <div class="section-info">
+                <h3>We are always ahead Proffesional solutions for your business.</h3>
+                <p>Our results will fascinate you with the results we have
+                </p>
+            </div>
+            <div class="proffesional__number row">
+                <div class="col">
+                    <p class="counter">1,546</p>
+                    <h4>Satisfied Clients</h4>
+                    <h6>Pure satisfaction</h6>
+                </div>
+                <div class="col">
+                    <p class="counter">14,345</p>
+                    <h4>Successful Investments</h4>
+                    <h6>Net income</h6>
+                </div>
+                <div class="col">
+                    <p class="counter">563</p>
+                    <h4>Branches Worldwide</h4>
+                    <h6>Highest level of credibility</h6>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- SERVICES -->
+    <section class="services section">
+        <div class="container">
+            <div class="services__title section-info-light">
+                <h3>Our Main Services</h3>
+                <p>Our team provides consulting services focusing on the most critical business issues.</p>
+            </div>
+            <div class="services__content">
+                <div class="row row-cols-3">
+                    <div class="col service__odd">
+                        <div class="service__item">
+                            <i class="fa fa-arrows-alt"></i>
+                            <h6>Commodities</h6>
+                            <p>Taque earum rerum hitaque tenetur rum sapiente</p>
+                        </div>
+                    </div>
+                    <div class="col service__eve">
+                        <div class="service__item">
+                            <i class="fa-solid fa-chart-column"></i>
+                            <h6>Analysis</h6>
+                            <p>Taque earum rerum hitaque tenetur rum sapiente</p>
+                        </div>
+                    </div>
+                    <div class="col service__odd">
+                        <div class="service__item">
+                            <i class="fab fa-btc"></i>
+                            <h6>Consulting</h6>
+                            <p>Taque earum rerum hitaque tenetur rum sapiente</p>
+                        </div>
+                    </div>
+                    <div class="col service__eve">
+                        <div class="service__item">
+                            <i class="fa-solid fa-gears"></i>
+                            <h6>Forecasting</h6>
+                            <p>Taque earum rerum hitaque tenetur rum sapiente</p>
+                        </div>
+                    </div>
+                    <div class="col service__odd">
+                        <div class="service__item">
+                            <i class="fa fa-bullseye"></i>
+                            <h6>Financial</h6>
+                            <p>Taque earum rerum hitaque tenetur rum sapiente</p>
+                        </div>
+                    </div>
+                    <div class="col service__eve">
+                        <div class="service__item">
+                            <i class="fa fa-cubes"></i>
+                            <h6>Assurance</h6>
+                            <p>Taque earum rerum hitaque tenetur rum sapiente</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- CUSTOMERS -->
+    <section class="customers section">
+        <div class="container">
+            <div class="customers__title section-info">
+                <h3>Our Customers' Opinion</h3>
+                <p>Our team provides consulting services focusing on the most critical business issues.</p>
+            </div>
+            <div class="customers__feedback owl-carousel owl-theme owl-loaded">
+                <div class="owl-stage-outer">
+                    <div class="owl-stage">
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t2.jpg" alt="">
+                            <h4>Gomez</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FOOTER -->
+    <footer></footer>
+
+
+
+<!-- -------------------------------------------------------- -->
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
+    <!-- OWL CAROUSEL JS -->
+    <script src="./js/owl.carousel.min.js"></script>
+
+    <!-- COUNT UP JS -->
+    <script src="./js/jquery.waypoints.min.js"></script>
+    <script src="./js/jquery.countup.min.js"></script>
+
+    <!-- BOOTSTRAP JS 5.1 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <!-- MAIN JS  -->
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
