--- a/index.html
+++ b/index.html
@@ -277,37 +277,37 @@
                                 et aliquet diam vestibulum ut.</p>
                         </div>
                         <div class="customers__item owl-item">
-                            <img src="./img/t2.jpg" alt="">
-                            <h4>Gomez</h4>
+                            <img src="./img/t3.jpg" alt="">
+                            <h4>john whick</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t1.jpg" alt="">
+                            <h4>Federeka</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t1.jpg" alt="">
+                            <h4>Federeka</h4>
                             <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
                                 et aliquet diam vestibulum ut.</p>
                         </div>
                         <div class="customers__item owl-item">
                             <img src="./img/t2.jpg" alt="">
+                            <h4>Mary watson</h4>
+                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
+                                et aliquet diam vestibulum ut.</p>
+                        </div>
+                        <div class="customers__item owl-item">
+                            <img src="./img/t3.jpg" alt="">
                             <h4>Gomez</h4>
                             <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
                                 et aliquet diam vestibulum ut.</p>
                         </div>
                         <div class="customers__item owl-item">
-                            <img src="./img/t2.jpg" alt="">
-                            <h4>Gomez</h4>
-                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
-                                et aliquet diam vestibulum ut.</p>
-                        </div>
-                        <div class="customers__item owl-item">
-                            <img src="./img/t2.jpg" alt="">
-                            <h4>Gomez</h4>
-                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
-                                et aliquet diam vestibulum ut.</p>
-                        </div>
-                        <div class="customers__item owl-item">
-                            <img src="./img/t2.jpg" alt="">
-                            <h4>Gomez</h4>
-                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
-                                et aliquet diam vestibulum ut.</p>
-                        </div>
-                        <div class="customers__item owl-item">
-                            <img src="./img/t2.jpg" alt="">
+                            <img src="./img/t4.jpg" alt="">
                             <h4>Gomez</h4>
                             <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
                                 et aliquet diam vestibulum ut.</p>
@@ -324,7 +324,56 @@
         </div>
     </section>
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+        <div class="footer__main section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 footer__form">
+                        <h4>Subscribe Newsletter</h4>
+                        <p>By subscribing to our mailing list you will always get latest news from us.</p>
+                        <form action="#">
+                            <input type="email" name="Email" placeholder="Enter your email..." required>
+                            <button>
+                                <a href=""><i class="fa-regular fa-envelope"></i></a>
+                            </button>
+                        </form>
+                    </div>
+                    <div class="col-2 footer__ourlink">
+                        <h4>Our Links</h4>
+                        <ul class="links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-4 footer__contactus">
+                        <h4>Contact Us</h4>
+                        <ul class="footer__contact">
+                            <li>
+                                <i class="fa fa-map-marker-alt"></i>
+                                1234k Avenue, 4th block, 
+                                <span> New York City.</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope"></i>
+                                <a href="mailto:info@example.com">info@example.com</a>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-phone-flip"></i> +1234 567 567
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <p>
+                © CyberMerged. All Rights Reserved | Design by 
+                <a href="https://w3layouts.com/" target="_blank">Cyber</a>
+            </p>
+        </div>
+    </footer>
 
 
 
