--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="header__main">
-            <nav class="header__navbar navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="header__navbar navbar navbar-expand-lg navbar-light py-0">
                 <div class="container">
                     <a class="navbar-brand" href="#"><span>CYBER</span>MERGED</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -213,7 +213,7 @@
                 <p>Our team provides consulting services focusing on the most critical business issues.</p>
             </div>
             <div class="services__content">
-                <div class="row row-cols-3">
+                <div class="row row-cols-1 row-cols-sm-3">
                     <div class="col service__odd">
                         <div class="service__item">
                             <i class="fa fa-arrows-alt"></i>
@@ -306,18 +306,6 @@
                             <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
                                 et aliquet diam vestibulum ut.</p>
                         </div>
-                        <div class="customers__item owl-item">
-                            <img src="./img/t4.jpg" alt="">
-                            <h4>Gomez</h4>
-                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
-                                et aliquet diam vestibulum ut.</p>
-                        </div>
-                        <div class="customers__item owl-item">
-                            <img src="./img/t2.jpg" alt="">
-                            <h4>Gomez</h4>
-                            <p>Cras tortor ipsum, gravida vitae finibus non, bibendum quis turpis. Cras semper accumsan metus,
-                                et aliquet diam vestibulum ut.</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -328,7 +316,7 @@
         <div class="footer__main section">
             <div class="container">
                 <div class="row">
-                    <div class="col-6 footer__form">
+                    <div class="col-12 col-md-6 footer__form">
                         <h4 class="footer__cap">Subscribe Newsletter</h4>
                         <p>By subscribing to our mailing list you will always get latest news from us.</p>
                         <form action="#">
@@ -338,7 +326,7 @@
                             </button>
                         </form>
                     </div>
-                    <div class="col-2 footer__ourlink">
+                    <div class="col-12 col-md-2 footer__ourlink">
                         <h4 class="footer__cap">Our Links</h4>
                         <ul class="links">
                             <li><a href="#">Home</a></li>
@@ -347,7 +335,7 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="col-4 footer__contactus">
+                    <div class="col-12 col-md-4 footer__contactus">
                         <h4 class="footer__cap">Contact Us</h4>
                         <ul class="footer__contact">
                             <li>
